<resources>
    <string name="app_name">test</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="warranty_date_range">Warranty date range:</string>
    <string name="calendar">calendar</string>
    <string name="search">Search</string>
    <string name="plus">+</string>
    <string name="asset_list">asset list</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_description_multi_line">Asset Description Multi Line</string>
    <string name="back">back</string>
    <string name="edit">edit</string>
    <string name="expired_warranty">Expired Warranty</string>
</resources>